objects/Static_Code_Analysis_Result__c.object
<CustomObject>
    <description>This object stores the results of Static Code Analysis executed through Copado.</description>
    <fields>
        <fullName>Blocker__c</fullName>
        <description>Number of Blocker violations</description>
        <label>Blocker</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Severity__c</field>
            <operation>equals</operation>
            <value>Blocker</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bugs__c</fullName>
        <description>CodeScan Bugs in violations</description>
        <label>Bugs</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Type__c</field>
            <operation>equals</operation>
            <value>Bug</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <label>Closed</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Code_Smells__c</fullName>
        <description>Number of Code Smell violations</description>
        <label>Code Smells</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Type__c</field>
            <operation>equals</operation>
            <value>Code Smell</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <label>Confirmed</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <description>Number of Critical violations</description>
        <label>Critical</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Severity__c</field>
            <operation>equals</operation>
            <value>Critical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>False_Positive__c</fullName>
        <label>False Positive</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>equals</operation>
            <value>False Positive</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fixed__c</fullName>
        <label>Fixed</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>equals</operation>
            <value>Fixed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Highest_Priority_Violation__c</fullName>
        <label>Highest Priority Violation</label>
        <summarizedField>Static_Code_Analysis_Violation__c.Priority__c</summarizedField>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <description>Number of Info violations</description>
        <label>Info</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Severity__c</field>
            <operation>equals</operation>
            <value>Info</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>Number of Major violations</description>
        <label>Major</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Severity__c</field>
            <operation>equals</operation>
            <value>Major</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <description>Number of Minor violations</description>
        <label>Minor</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Severity__c</field>
            <operation>equals</operation>
            <value>Minor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Violations__c</fullName>
        <description>Overall number of rule violations.</description>
        <label>Number of Violations</label>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <label>Removed</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>equals</operation>
            <value>Removed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reopened__c</fullName>
        <label>Reopened</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>equals</operation>
            <value>Reopened</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <label>Resolved</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Score_v11__c</fullName>
        <description>New v11 version of the Score field.</description>
        <label>Score</label>
        <summarizedField>Static_Code_Analysis_Violation__c.Score__c</summarizedField>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unresolved__c</fullName>
        <label>Unresolved</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>notEqual</operation>
            <value>Fixed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>notEqual</operation>
            <value>False Positive</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>notEqual</operation>
            <value>Won&apos;t fix</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>notEqual</operation>
            <value>Removed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vulnerabilities__c</fullName>
        <description>CodeScan Vulnerability violations</description>
        <label>Vulnerabilities</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Type__c</field>
            <operation>equals</operation>
            <value>Vulnerability</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wont_fix__c</fullName>
        <label>Won&apos;t fix</label>
        <summaryFilterItems>
            <field>Static_Code_Analysis_Violation__c.Resolution__c</field>
            <operation>equals</operation>
            <value>Won&apos;t fix</value>
        </summaryFilterItems>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Static Code Analysis Result</label>
    <nameField>
        <displayFormat>SCA-{00000}</displayFormat>
        <label>Static Code Analysis Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Results</pluralLabel>
    <recordTypes>
        <fullName>CodeScan</fullName>
        <active>true</active>
        <description>Record Type for CodeScan integration. Requires CodeScan licensing.</description>
        <label>CodeScan</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMD</fullName>
        <active>true</active>
        <description>Record Type for free of charge PMD integration</description>
        <label>PMD</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>